syntax = 'proto3';

package calculator;

message SumRequest {
  int32 a = 1;
  int32 b = 2;
}

message SumResponse {
  int32 result = 1;
}

message PrimeNumberDecompositionRequest {
  int32 number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 prime_factor = 1;
}

message AverageRequest {
  int32 number = 1;
}

message AverageResponse {
  double average = 1;
}

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 maximum = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse);
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse);
  rpc Average(stream AverageRequest) returns (AverageResponse);
  rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse);
}
